docs: Add docs for Refresh api
