# api/content/controller.go
@@ -11,15 +11,15 @@ type Controller struct {
 }
 
 // Find contents
-// @Summary Fetch contents
-// @Tags     contents
-// @Security ApiKeyAuth
-// @Param    sourceTypes  query     []string  false  "filter contents by source types"  Enums(rss,vimeo,youtube)
-// @Param    sources      query     []int     false  "filter contents by source id"
-// @Param    page         query     int       false  "Fetch page"  minimum(1)
-// @Success  200          {object}  database.Pagination{Items=[]model.Content}
-// @Failure  500          {object}  api.JSONError
-// @Router   /contents [get]
+// @Summary   Fetch contents
+// @Tags      contents
+// @Security  ApiKeyAuth
+// @Param     sourceTypes  query     []string  false  "filter contents by source types"  Enums(rss,vimeo,youtube)
+// @Param     sources      query     []int     false  "filter contents by source id"
+// @Param     page         query     int       false  "Fetch page"  minimum(1)
+// @Success   200          {object}  database.Pagination{Items=[]model.Content}
+// @Failure   500          {object}  api.JSONError
+// @Router    /contents [get]
 func (c *Controller) Find(ctx *fiber.Ctx) error {
 	query := ctx.Locals(middlewares.QUERY).(FindQuery)
 
