# api/source/controller.go
@@ -45,7 +45,7 @@ func (c *Controller) FindAll(ctx *fiber.Ctx) error {
 // Add a new source
 // @Summary   Add a new source
 // @Tags      sources
-// @Security ApiKeyAuth
+// @Security  ApiKeyAuth
 // @Success   200   {object}  model.Source
 // @Failure   404   {object}  api.JSONError
 // @Failure   500   {object}  api.JSONError
@@ -122,12 +122,12 @@ func (c *Controller) Create(ctx *fiber.Ctx) error {
 
 // Update a source
 // @Summary   Update a source
-// @Security ApiKeyAuth
+// @Security  ApiKeyAuth
 // @Tags     sources
 // @Success   200       {object}  model.Source
 // @Failure   500       {object}  api.JSONError
 // @Param     body      body      source.UpdateBody  true  "Update body"
-// @Param     sourceID  path      integer     true  "ID of the source"
+// @Param     sourceID  path      integer            true  "ID of the source"
 // @Router    /sources/{sourceID} [patch]
 func (c *Controller) Update(ctx *fiber.Ctx) error {
 	body := ctx.Locals(middlewares.BODY).(UpdateBody)
@@ -153,7 +153,7 @@ func (c *Controller) Update(ctx *fiber.Ctx) error {
 
 // Delete a source
 // @Summary   Delete a source
-// @Security ApiKeyAuth
+// @Security  ApiKeyAuth
 // @Tags      sources
 // @Success   200       {object}  api.JSONMessage
 // @Failure   404       {object}  api.JSONError
@@ -177,7 +177,7 @@ func (c *Controller) Delete(ctx *fiber.Ctx) error {
 
 // Update orders of the sources
 // @Summary   Update orders of the sources
-// @Security ApiKeyAuth
+// @Security  ApiKeyAuth
 // @Tags      sources
 // @Success   200   {array}   []model.Source
 // @Failure   400   {object}  api.JSONError
